fix: font-sizes, gaps, text-shadow

--- a/styles/style.css
+++ b/styles/style.css
@@ -40,11 +40,13 @@
 
 .header__title {
   font-size: clamp(3.0625rem, 2.7104rem + 1.5023vw, 4.0625rem);
+  display: block;
   margin-bottom: 20px;
 }
 
 .header__subtitle {
   font-size: clamp(0.875rem, 0.6769rem + 0.8451vw, 1.4375rem);
+  text-transform: uppercase;
 }
 
 /* карточки */
@@ -57,6 +59,7 @@
 }
 
 .card__title {
+  font-size: 18px;
   font-variation-settings: 'wght' var(--title-weight, 715);
   padding: 4px 10px;
 }
@@ -81,8 +84,11 @@
   right: 25px;
   mix-blend-mode: hard-light;
   opacity: 50%;
-  text-shadow: 1px var(--main-color, #fff);
-  -webkit-text-stroke: 1px var(--main-color, #fff);
+  text-shadow:
+    1px 0 0 var(--main-color, #fff),
+    0 1px 0 var(--main-color, #fff),
+    -1px 0 0 var(--main-color, #fff),
+    0 -1px 0 var(--main-color, #fff);
 }
 
 @supports (text-stroke: 1px var(--main-color, #fff)) or (-webkit-text-stroke: 1px var(--main-color, #fff)) {
@@ -93,9 +99,9 @@
   }
 }
 
-
-
 .card__text {
+  font-size: 18px;
+  line-height: 21px;
   margin: 25px;
 }
 
@@ -114,7 +120,7 @@
 .button-container {
   display: flex;
   padding: 0 25px 25px 25px;
-  gap: 12px;
+  gap: 8px;
   justify-content: right;
   align-items: center;
 }
@@ -151,7 +157,7 @@
 }
 
 .button:focus-visible {
-  box-shadow: 2px 2px var(--accent-color, #000);
+  box-shadow: 4px 4px var(--accent-color, #000);
   transition: 0.3s ease;
 }
 
@@ -266,7 +272,7 @@
   grid-template-columns: 39px 1fr;
   align-items: center;
   column-gap: 20px;
-  row-gap: 23px;
+  row-gap: 30px;
   padding: 30px;
   inline-size: clamp(21.313rem, 21.048rem + 1.127vw, 22.063rem);
 }
@@ -292,8 +298,6 @@ body:has(.dialog[open]) {
 }
 
 .dialog[open]::backdrop {
-  position: fixed;
-  inset: 0px;
   background: rgba(0, 0, 0, 0.75);
 }
 
